tests/src/main/java/kendal/test/negative/tsfields/FinalFieldUninit.out
FinalFieldUninit.java:17:9: compiler.err.cant.assign.val.to.final.var: aFinalField
1 error